Check system architecture before installing busybox, hide "stop aireplay" button in toolbar, improve watchdog, improve logging and bug report, code cleanup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
 
         <activity
             android:name=".SendLogActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="com.hijacker.SendLogActivity" />
