UI text fix, make the app persistent to avoid android killing it when running in the background, save 'last seen' timestamp for devices, add 'copy on click' in info dialogs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:persistent="true"
         android:theme="@style/ThemeAppCompatNoActionBarHoloBlue">
         <provider
             android:name="android.support.v4.content.FileProvider"
