Change bug reporting and feedback to use dedicated server, add 'check for update' function and option to check on startup, change dismiss() to dismissAllowingStateLoss() in dialogs, update version and AndroidStudio stuff

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.hijacker"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 4
-        versionName "v1.1-beta.4"
+        versionCode 5
+        versionName "v1.2-exp.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
