Make every class use the same static handler in MainActivity with runInHandler(), change sample commands, delete obsolete code, update version to exp.1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 10
-        versionName "v1.2-beta.3.2"
+        versionName "v1.3-exp.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
