Convert ReaverFragment to use AsyncTask instead of threads and runnables, update version to v1.3-beta.1 (14)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         versionCode 14
-        versionName "v1.3-exp.5"
+        versionName "v1.3-beta.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
