--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:persistent="true"
+        android:extractNativeLibs="false"
         android:supportsRtl="true"
         android:theme="@style/ThemeAppCompatNoActionBarHoloBlue">
         <provider
